# mitotem

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.py
config/: resnet50_unet.yaml  settings.py  test_resnet50_unet.yaml
docs/: Makefile  conf.py  index.rst  make.bat
mitotem/: data.py  layer.py  main.py  network.py  predictor.py  train.py  util.py
notebooks/: 1-unet-debug.ipynb  2-dataloader-test.ipynb  3-analysis.ipynb  3-cristae-segmentation.ipynb  4-pipeline-sandbox.ipynb  5-hpo.ipynb  6-hpo-cristae.ipynb
pyshearlab/: pySLFilters.py  pySLUtilities.py  pyShearLab2D.py
reports/: presentation.ipynb
script/: train_resnet50unet.sh
scripts/: half.py  hpo_unet.sh  train_unet.sh
src/analysis/: components.py
src/data/: loaders.py  make_dataset.py
src/models/: hpo_unet.py  layers.py  loss.py  networks.py  train_unet.py  unet.py  utils.py
src/visualization/: analysis.py
test/: test_layer.py  test_main.py  test_network.py  test_train.py  test_util.py
test/notebook/: test_data.ipynb  test_sam2.ipynb  test_shearlet.ipynb
