[project]
authors = [{name = "ogkristi"}]
dependencies = ["opencv-python-headless>=4.10.0.84,<5"]
description = "Add a short description here"
name = "mitotem"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mitotem = { path = ".", editable = true }

[tool.pixi.tasks]
mitotem = "python mitotem/main.py"

[tool.pixi.dependencies]
cpuonly = {version = "*", channel="pytorch"}
pytorch = {version = "*", channel="pytorch"}
torchvision = {version = "*", channel="pytorch"}
click = ">=8.1.7,<9"
hydra-core = ">=1.3.2,<2"
tqdm = ">=4.66.5,<5"
iopath = ">=0.1.10,<0.2"
segmentation-models-pytorch = ">=0.3.4,<0.4"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
matplotlib = ">=3.9.2,<4"
pixi-kernel = ">=0.5.1,<0.6"
ipykernel = ">=6.29.5,<7"
pywavelets = ">=1.7.0,<2"
scipy = ">=1.14.1,<2"
pyfftw = ">=0.15.0,<0.16"
tensorboard = ">=2.18.0,<3"

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
